--- a/style.css
+++ b/style.css
@@ -1,78 +1,172 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-    background-color: #e2eaf5;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  background-color: #e2eaf5;
 }
 
-body{
-    max-width: 1440px;
-    margin-left: auto;
-    margin-top: auto;
+body {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-top: auto;
 }
 
-.app-container{
-    /* background-color: brown; */
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    padding: 40px;
+/* NAVBAR */
+
+.app-container {
+  /* background-color: brown; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 40px;
 }
 
-.navbar-container{
-    display: flex;
-    justify-content: center;
+.navbar-container {
+  display: flex;
+  justify-content: center;
 }
 
-.navbar-container img{
-    margin-right: 20px;
+.navbar-container img {
+  margin-right: 20px;
 }
 
-.custom-input{
-    border: none;
-    border-radius: 15px;
-    background-color: #fdfffe;
-    color: #232323;
-    padding: 16px;
-    width: 100%;
+.custom-input {
+  border: none;
+  border-radius: 15px;
+  background-color: #fdfffe;
+  color: #232323;
+  padding: 16px;
+  width: 100%;
 }
-.custom-input:focus{
-    outline: 2px solid #3aa2ff;
-}
-
-.custom-input::placeholder{
-    opacity: 0.3;
+.custom-input:focus {
+  outline: 2px solid #3aa2ff;
 }
 
-.showcase-container{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-right: 40px;
-    padding-left: 40px;
-    margin-top: 60px;
+.custom-input::placeholder {
+  opacity: 0.3;
 }
 
-.showcase-text h2:first-child{
-    font-size: 3.125rem;
-    font-weight: 700;
-    color: #2a394f; 
+/* SHOWCASE */
+
+.showcase-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 40px;
+  padding-left: 40px;
+  margin-top: 60px;
 }
 
-.showcase-text h2:last-child{
-    font-size: 5.125rem;
-    font-weight: 700;
-    color: #2a394f; 
+.showcase-text h2:first-child {
+  font-size: 3.125rem;
+  font-weight: 700;
+  color: #2a394f;
 }
 
-.showcase-text p{
-    color: #9aa0a8; 
-    margin-bottom: 15px;
-    margin-top: 7px;
-    font-weight: 500;
+.showcase-text h2:last-child {
+  font-size: 5.125rem;
+  font-weight: 700;
+  color: #2a394f;
 }
 
+.showcase-text p {
+  color: #9aa0a8;
+  margin-bottom: 15px;
+  margin-top: 7px;
+  font-weight: 500;
+}
 
+/* HOUR FORECAST CONTAINER */
 
+.houly-forecast-container {
+  padding: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(90.28deg, #007dfe 0.22%, #3aa2ff 99.76%);
+  box-shadow: 0px 30px 50px -19px rgba(1, 126, 254, 0.5);
+  border-radius: 40px;
+}
 
+.hour-weather-item {
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.hour-weather-item p:first-child {
+  background-color: transparent;
+  color: #fff;
+  font-weight: 500;
+}
+
+.hour-weather-item p:last-child {
+  background-color: transparent;
+  color: #fff;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.hour-weather-item img {
+  background-color: transparent;
+  margin-bottom: 10px;
+  height: 70px;
+  width: 70px;
+}
+
+/* WEATHER-DETAILS-CONTAINER */
+
+.weather-details-container {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 220px);
+  grid-column-gap:10px;
+}
+
+.weather-detail-item {
+  background-color: #fff;
+  border-radius: 40px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.weather-detail-item p {
+  color: #8f8f8f;
+  background-color: #fff;
+  border-radius: 40px;
+  padding: 30px;
+}
+
+.weather-detail-item div {
+  background-color: #fff;
+  /* padding: 5px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.weather-detail-item div p {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #2a394f;
+  background-color: #fff;
+}
+
+.weather-detail-item div p span{
+    font-size: 1.1rem;
+    margin-left: -1px;
+  background-color: #fff;
+}
+
+.weather-detail-item div img {
+  width: 40px;
+  height: 40px;
+  margin-left: 18px;
+  background-color: #fff;
+}
