--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body {
   margin-top: auto;
 }
 
-/* NAVBAR */
-
 .app-container {
-  /* background-color: brown; */
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 40px;
+    display: grid;
+    grid-template-columns: repeat(2, 0.5fr);
+    padding: 40px;
+    grid-column-gap: 80px;
 }
+
+/* NAVBAR */
 
 .navbar-container {
   display: flex;
@@ -122,7 +122,7 @@ body {
   margin-top: 50px;
   display: grid;
   grid-template-columns: repeat(4, 220px);
-  grid-column-gap:10px;
+  grid-column-gap: 10px;
 }
 
 .weather-detail-item {
@@ -169,4 +169,55 @@ body {
   height: 40px;
   margin-left: 18px;
   background-color: #fff;
+}
+
+/* WEEKLY-FORECAST-CONTEINER */
+
+.weekly-forecast-container{
+    background-color: #fff;
+    border-radius: 40px;
+    padding: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.day-weather-item p,img,div{
+    flex: 1;
+    gap: 20px;
+}
+
+.day-weather-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fff;
+}
+
+.day-weather-item p{
+    background-color: #fff;
+    font-weight: 500;
+    color: #8f8f8f;
+}
+
+.day-weather-item img{
+    height: 60px;
+    width: 60px;  
+    background-color: #fff;
+}
+
+.day-weather-item div{
+    display: flex;
+    background-color: #fff;
+}
+
+.day-weather-item div p:first-child{
+    color: #2a394f;
+    font-weight: 500;
+    margin-right: 4px;
+}
+
+.day-weather-item div p:last-child{
+    color: #8f8f8f;
+    font-weight: 500;
 }
